# About-This-PC

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md  config(1).plist  logger.cpp  logger.h  main.cpp  mainwindow.cpp  tabpage.cpp  tabpage.h
Assets/designs/: linux-toolbar.xcf  windows10.xcf
assets/designs/: appicon.xcf  laptop-icon.xcf  windows11.xcf
linux/: CMakeLists.txt  Sample.desktop  application-icon.qrc  binaries.qrc  build.sh  cicon.cpp  cicon.h  classicpage.cpp  classicpage.h  computers.qrc  default-linux-icon.qrc  displays.cpp  displays.h  global.cpp  global.h  icons.qrc  logger.cpp  logger.h  main.cpp  mainwindow.cpp  mainwindow.h  settings.cpp  settings.hpp  storage.cpp  storage.h  supportpage.cpp  supportpage.h  tabpage.cpp  tabpage.h  themelistener.cpp  themelistener.h  updatemanager.cpp  updatemanager.h
linux-helper/: CMakeLists.txt  main.cpp
linux-service/: CMakeLists.txt  icons.qrc  main.cpp
linux/binaries/: linux-helper
windows/: AboutThisPC.sln
windows/AboutThisPC/: AboutThisPC.csproj  AboutThisPC.vcxproj  AboutThisPC.vcxproj.filters  App.xaml  App.xaml.cpp  App.xaml.cs  App.xaml.h  ClassicPage.xaml  ClassicPage.xaml.cs  DrivesPage.xaml  DrivesPage.xaml.cs  Generator.cs  Logger.cpp  Logger.cs  Logger.h  MainPage.xaml  MainPage.xaml.cs  MainWindow.idl  MainWindow.xaml  MainWindow.xaml.cpp  MainWindow.xaml.cs  MainWindow.xaml.h  NativeMethods.txt  OverviewPage.xaml  OverviewPage.xaml.cs  Package.appxmanifest  Resources.resw  SupportPage.xaml  SupportPage.xaml.cs  SystemTrayManager.cs  app.manifest  readme.txt
windows/AboutThisPC/Properties/: launchSettings.json
